refactor: 🔥 remove image preloading
Image preloading was causing memory usage issues